# monorepo-demo

./: .gitignore  README.md  main.py  mise.toml  pyproject.toml
.moon/: tasks.yml  workspace.yml
librarys/library1/: main.py  pyproject.toml
librarys/library2/: main.py  pyproject.toml
projects/project1/: moon.yml  pyproject.toml
projects/project2/: pyproject.toml
